...
      <div class="notif-wave" id="notifWave"></div>
      <div class="notif" id="notif">
        <div class="notif-content">
          <div class="notif-row">
            <div class="notif-icon info" id="notifIcon"></div>
            <div class="notif-body">
              <div class="notif-title" id="notifTitle">Готово</div>
              <div class="notif-sub" id="notifSub"></div>
            </div>
          </div>
          <div class="notif-details">
            <div class="notif-amount" id="notifAmount"></div>
            <div class="notif-commission" id="notifCommission"></div>
...
