...
            val buttonText = when (uiState) {
                is BiometricUiState.Error ->
                    if ((uiState as BiometricUiState.Error).canRetry) "Попробовать снова"
                    else "Продолжить"
                is BiometricUiState.Authenticating -> "Ожидание..."
                is BiometricUiState.AutoSkipped -> "Переходим..."
                else -> "Подтвердить"
            }

            MDAOButton(
                text = buttonText,
                onClick = {
                    when (uiState) {
...
